k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-backend
  labels:
    app: task-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task-backend
  template:
    metadata:
      labels:
        app: task-backend
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image: 975049900198.dkr.ecr.us-east-1.amazonaws.com/task-manager-backend:latest #<ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/task-manager-backend:latest 
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: task-backend-service
spec:
  type: ClusterIP
  selector:
    app: task-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
