k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-frontend
  labels:
    app: task-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-frontend
  template:
    metadata:
      labels:
        app: task-frontend
    spec:
      containers:
      - name: frontend
        image: 975049900198.dkr.ecr.us-east-1.amazonaws.com/task-manager-frontend:latest  #<ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/task-manager-frontend:latest #image: ${ECR_FRONTEND_URL}:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: task-frontend-service
spec:
  type: ClusterIP
  selector:
    app: task-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
