k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
  annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - task-manager.local
      secretName: task-manager-tls-secret
  rules:
    - host: task-manager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-frontend-service
                port:
                  number: 80
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: task-backend-service
                port:
                  number: 5000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: task-backend-service
                port:
                  number: 5000
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
